[package]
name = "supdock"
version = "3.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.2.1"
shell-words = "1.0.0"
strsim = "0.10.0"
strum = "0.24.1"
strum_macros = "0.24.3"
which = "4.4.0"
inquire = "0.1.0"
serde_json = "1.0.96"

[profile.release]
panic = "abort"
codegen-units = 1
strip = true
