[package]
name = "supdock"
description = "What's Up, Doc(ker)? A slightly more visual way to interact with the docker daemon"
version = "3.5.2"
authors = ["Niels Segers <segers.n@hotmail.com>"]
edition = "2021"
license = "MIT"
keyword = [
    "docker",
    "supdock",
    "visual",
    "interactive",
    "wrapper",
    "cli",
    "compose",
    "docker-compose",
]
categories = ["command-line-utilities", "virtualization"]
homepage = "https://github.com/segersniels/supdock/"
repository = "https://github.com/segersniels/supdock/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.2.1"
shell-words = "1.0.0"
strsim = "0.10.0"
strum = "0.24.1"
strum_macros = "0.24.3"
which = "4.4.0"
inquire = "0.1.0"
serde_json = "1.0.96"
env_logger = "0.10.1"
log = "0.4.20"

[profile.release]
panic = "abort"
strip = true
lto = "thin"
