[package]
name = "supdock"
version = "0.1.0"
authors = ["Niels Segers <segers.n@@hotmail.com>"]
description = "WebAssembly base for supdock"
license = "MIT/Apache-2.0"
repository = "https://github.com/segersniels/supdock"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 3

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
simsearch = "0.2"
wee_alloc = "0.4.5"
