[package]
name = "supdock"
version = "0.1.0"
authors = ["Niels Segers <segers.n@@hotmail.com>"]
description = "WebAssembly base for supdock"
license = "MIT/Apache-2.0"
repository = "https://github.com/segersniels/supdock"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "-g", "--enable-simd", "--enable-reference-types"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wee_alloc = "0.4.5"
strsim = "0.10.0"
